# VoiceCube

./: .gitignore  README.md  VoiceStick.spec  build_exe.py  fix-plan.md  flash_fw.py  installer.nsi  monitor.py
desktop/python/: notes.md
desktop/python/voicestick/: app.py  asr_client.py  asr_protocol.py  ble.py  config.py  coordinator.py  input_injector.py  llm_translation_client.py  ogg_opus_muxer.py
desktop/python/voicestick/ui/: floatball.py  settings.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble_service.c  ble_service.h  board_config.h  button.c  display.c  display.h  es8311_audio.c  es8311_audio.h  es8311_mic.c  es8311_mic.h  idf_component.yml  main.c  opus_encoder.c
