idf_component_register(
    SRCS
        "main.c"
        "es8311_mic.c"
        "opus_encoder.c"
        "ble_service.c"
        "display.c"
        "button.c"
        "es8311_audio.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_timer
        nvs_flash
        bt
        opus
        esp_codec_dev
)
